--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <div class="container">
       <h1>Random Quotes</h1>
+      <img src="" alt="quote-author" class="author-avatar" />
       <div id="quote" class="quote">
         <p id="quote-text" class="quote-text">
           Click the button to get a random quote
