Favorites button icon and refactoring

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button id="random-quote-btn" class="btn btn-primary">
           Get random quote
         </button>
-        <i id="quote-favorite-btn" class="far fa-star star-icon"></i>
+        <i id="quote-favorite-btn" class="fa-regular fa-heart heart-icon"></i>
       </div>
     </div>
 
